# RecommenderSystems

./: .gitignore  README.md
chapter5/: Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
chapter5/colab/: Association.ipynb  BPR.ipynb  FM.ipynb  IMF.ipynb  Item2vec.ipynb  LDA_collaboration.ipynb  LDA_content.ipynb  MF.ipynb  NMF.ipynb  Popularity.ipynb  RF.ipynb  Random.ipynb  SVD.ipynb  UMCF.ipynb  Word2vec.ipynb  data_download.ipynb
chapter5/notebook/: Association.ipynb  Association.py  BPR.ipynb  BPR.py  FM.ipynb  FM.py  IMF.ipynb  IMF.py  Item2vec.ipynb  LDA_collaboration.ipynb  LDA_collaboration.py  LDA_content.ipynb  LDA_content.py  MF.ipynb  MF.py  NMF.ipynb  NMF.py  Popularity.ipynb  Popularity.py  RF.ipynb  RF.py  Random.ipynb  Random.py  SVD.ipynb  SVD.py  Template.ipynb  Template.py  UMCF.ipynb  UMCF.py  Word2vec.ipynb  Word2vec.py  data_download.ipynb  item2vec.py
chapter5/src/: association.py  base_recommender.py  bpr.py  fm.py  imf.py  item2vec.py  lda_collaboration.py  lda_content.py  mf.py  nmf.py  popularity.py  random.py  rf.py  svd.py  umcf.py  word2vec.py
chapter5/util/: data_loader.py  metric_calculator.py  models.py
chapter7/: metrics.ipynb
chapter7/src/: metrics.py
chapter7/tests/: test_metrics.py
