[tool.poetry]
name = "chapter5"
version = "0.1.0"
description = ""
authors = ["shinnosuke-okubo <shinnosuke.okubo@linecorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "1.5.1"
pandas = "2.2.2"
mlxtend = "0.23.1"
implicit = "0.7.2"
gensim = "4.3.3"
surprise = "0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
